--- a/i3/config
+++ b/i3/config
@@ -18,8 +18,6 @@ font pango:DejaVu Sans Mono 8
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# disable titlebar for i3-gaps to work 
-# for_window [class="^.*"] border pixel 1
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -27,8 +25,8 @@ exec --no-startup-id nm-applet
 
 # load the screen-settings:
 exec --no-startup-id bash .screenlayout/gnome.sh
+exec --no-startup-id owncloud
 
-exec_always --no-startup-id feh --bg-scale /home/cedric/Pictures/Wallpapers/surfing2.jpg --bg-scale /home/cedric/Pictures/Wallpapers/vertical-rose.jpeg
 
 
 # Use pactl to adjust volume in PulseAudio.
@@ -188,21 +186,51 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # custom stuff:
-# activate gaps:
+# disable titlebar for i3-gaps to work 
+for_window [class="^.*"] border pixel 3
+client.focused          #00ffff #285577 #ffffff #2e9ef4   #00ffff
+
 # gaps inner 10
 # gaps outer 10
+exec_always --no-startup-id feh --bg-scale /home/cedric/Pictures/Wallpapers/surfing2.jpg --bg-scale /home/cedric/Pictures/Wallpapers/vertical-rose.jpeg
 
 # switch caps lock and escape:
 exec_always --no-startup-id "setxkbmap -option caps:swapescape"
 exec_always --no-startup-id "setxkbmap -option grp:alt_shift_toggle us,ch"
 
+
+## Screenshots
+bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/Screenshots/$(date).png"
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/Screenshots/$(date).png"
+bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/Screenshots/$(date '+%F-%T').png"
+
+## Clipboard Screenshots
+bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
+
+
+
+# Status bar on each screen:
+
 bar {
     position top
     font pango:DejaVu Sans Mono, FontAwesome 10
+    output HDMI-A-2
 	tray_output none
 	status_command /home/cedric/Sources/bumblebee-status/bumblebee-status \
-        -m nic disk:root cpu \
+        -m date time \
+        -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
+        -t dracula-powerline 
+}
+bar {
+    position top
+    output DisplayPort-0
+    font pango:DejaVu Sans Mono, FontAwesome 10
+	tray_output none
+	status_command /home/cedric/Sources/bumblebee-status/bumblebee-status \
+        -m layout-xkb cpu \
 		memory pasink pasource date time \
         -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
-        -t rose-pine
+        -t dracula-powerline 
 }
