--- a/i3/config
+++ b/i3/config
@@ -9,15 +9,14 @@ set $mod Mod4
 # font pango:monospace 8 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Caskaydia Cove Nerd Mono 9 
+font pango:DejaVu Sans Mono 8
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
+bindsym $mod+Escape exec --no-startup-id "i3lock -i ~/Pictures/Wallpapers/blured_surfing2.png -p default -d -n"
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -27,23 +26,20 @@ exec --no-startup-id nm-applet
 exec --no-startup-id bash .screenlayout/gnome.sh
 exec --no-startup-id owncloud
 
-exec_always --no-startup-id feh --bg-scale /home/cedric/Pictures/wallpaper.jpg
 
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym $mod+F12 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym $mod+F11 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym $mod+F10 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
-
-bindsym $mod+Escape exec "i3lock -i ~/Pictures/blured_wallpaper.png -p default -d -n"
+bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+q kill 
@@ -119,15 +115,15 @@ set $ws10 "10"
 
 # assign workspaces to screens:
 workspace $ws1 output DisplayPort-0
-workspace $ws2 output HDMI-A-2 
+workspace $ws2 output DisplayPort-0 
 workspace $ws3 output DisplayPort-0
-workspace $ws4 output HDMI-A-2 
+workspace $ws4 output DisplayPort-0 
 workspace $ws5 output DisplayPort-0
-workspace $ws6 output HDMI-A-2 
-workspace $ws7 output DisplayPort-0
+workspace $ws6 output DisplayPort-0
+workspace $ws7 output HDMI-A-2
 workspace $ws8 output HDMI-A-2 
-workspace $ws9 output DisplayPort-0
-workspace $ws0 output HDMI-A-2 
+workspace $ws9 output HDMI-A-2
+workspace $ws10 output HDMI-A-2 
 
 
 # switch to workspace
@@ -190,17 +186,24 @@ bindsym $mod+r mode "resize"
 
 # custom stuff:
 # disable titlebar for i3-gaps to work 
-for_window [class=".*"] border pixel 3
+for_window [class="^.*"] border pixel 2
 client.focused          #00ffff #285577 #ffffff #2e9ef4   #00ffff
 
 # gaps inner 10
 # gaps outer 10
-# exec_always --no-startup-id feh --bg-scale /home/cedric/Pictures/Wallpapers/surfing2.jpg --bg-scale /home/cedric/Pictures/Wallpapers/vertical-rose.jpeg
 
 # switch caps lock and escape:
-exec_always --no-startup-id "setxkbmap -option caps:swapescape"
+exec_always --no-startup-id "setxkbmap -option caps:escape_shifted_capslock"
 exec_always --no-startup-id "setxkbmap -option grp:alt_shift_toggle us,ch"
 
+# start picom for transparency:
+# exec_always --no-startup-id compton 
+# --config ~/.config/picom/config
+
+# lxpolkit allows us to use apps like gnome-software, even when a login is required
+exec --no-startup-id lxpolkit
+# unclutter will make the mouse disappear after a certain amount of time
+exec --no-startup-id unclutter
 
 ## Screenshots
 bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/Screenshots/$(date).png"
@@ -216,33 +219,27 @@ bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection c
 
 # Status bar on each screen:
 
-# first one commented out on laptop
-# bar {
-#     position top
-#     font pango:DejaVu Sans Mono, FontAwesome 10
-#     output HDMI-A-2
-# 	tray_output none
-# 	status_command /home/cedric/Sources/bumblebee-status/bumblebee-status \
-#         -m date time \
-#         -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
-#         -t dracula-powerline 
-# }
 bar {
     position top
-# <<<<<<< HEAD
-    font pango:Caskaydia Cove Nerd Mono 11
+    font pango:DejaVu Sans Mono, FontAwesome 10
+    output HDMI-A-2
 	tray_output none
 	status_command /home/cedric/Sources/bumblebee-status/bumblebee-status \
-        -m spotify battery-upower pasink pasource \
-            layout date time \
-# =======
-#     output DisplayPort-0
-#     font pango:DejaVu Sans Mono, FontAwesome 10
-# 	tray_output none
-# 	status_command /home/cedric/Sources/bumblebee-status/bumblebee-status \
-#         -m layout-xkb cpu \
-# 		memory pasink pasource date time \
-# >>>>>>> 1f35f31bef0c07d77c30f31d6d178daea4759520
+        -m date time \
         -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
         -t dracula-powerline 
 }
+bar {
+    position top
+    output DisplayPort-0
+    font pango:DejaVu Sans Mono, FontAwesome 10
+	tray_output none
+	status_command /home/cedric/Sources/bumblebee-status/bumblebee-status \
+        -m layout-xkb cpu \
+		memory pasink pasource date time \
+        -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
+        -t dracula-powerline 
+}
+
+
+exec_always --no-startup-id feh --bg-scale /home/cedric/Pictures/Wallpapers/surfing2.jpg --bg-scale /home/cedric/Pictures/Wallpapers/vertical-rose.jpeg
