--- a/i3/config
+++ b/i3/config
@@ -212,8 +212,8 @@ bindsym $mod+r mode "resize"
 
 # custom stuff:
 # disable titlebar for i3-gaps to work
-for_window [class="^.*"] border pixel 2
-client.focused          #00ffff #285577 #ffffff #2e9ef4   #00ffff
+for_window [class="^.*"] border pixel 1
+client.focused          #ffa500 #5f5f5f #ffffff #ffa500 #ffa500
 
 # Status bar on each screen:
 # bar {
@@ -232,11 +232,11 @@ bar {
     font pango:DejaVu Sans Mono, FontAwesome 10
     output HDMI-A-2
     tray_output none
-    status_command /home/cedric/Sources/bumblebee-status/bumblebee-status \
-        -m layout-xkb cpu disk\
-        memory battery-upower pasink pasource date time \
-        -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
-        -t dracula-powerline
+    # status_command /home/cedric/Sources/bumblebee-status/bumblebee-status \
+    #     -m layout-xkb cpu disk\
+    #     memory battery-upower pasink pasource date time \
+    #     -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
+    #     -t dracula-powerline
 }
 # For the second screen on PC
 bar {
@@ -248,5 +248,5 @@ bar {
         -m layout-xkb cpu disk\
         memory pasink pasource date time \
         -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" \
-        -t solarized
+        -t dracula-powerline
 }
